<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@+id/navigation_players">

    <fragment
        android:id="@+id/navigation_player_details"
        android:name="com.shtain.nba.presentation.player.PlayerDetailsFragment"
        android:label="@string/player"
        tools:layout="@layout/fragment_players">
        <action
            android:id="@+id/action_player_to_team"
            app:destination="@id/navigation_team_details" />
        <argument
            android:name="playerId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_team_details"
        android:name="com.shtain.nba.presentation.team.TeamDetailsFragment"
        android:label="@string/players_team"
        tools:layout="@layout/fragment_players">
        <argument
            android:name="teamId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_players"
        android:name="com.shtain.nba.presentation.players.PlayersListFragment"
        android:label="@string/players"
        tools:layout="@layout/fragment_players">
        <action
            android:id="@+id/action_list_to_player"
            app:destination="@id/navigation_player_details" />
        <action
            android:id="@+id/action_list_to_team"
            app:destination="@id/navigation_team_details" />
    </fragment>

</navigation>