<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    app:cardBackgroundColor="@color/colorCardBackground"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_nba_ball" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="20dp"
            android:text="@string/app_name"
            android:textColor="@color/colorTextBase"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorTextBase"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="James LeBron" />

        <TextView
            android:id="@+id/positionHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTextView"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/position"
            android:textColor="@color/colorTextBase"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/positionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTextView"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/positionHintTextView"
            android:textColor="@color/colorTextBase"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="F" />

        <TextView
            android:id="@+id/teamHintTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/positionHintTextView"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/team"
            android:textColor="@color/colorTextBase"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/teamTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/positionHintTextView"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/teamHintTextView"
            android:textColor="@color/colorTextBase"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Lakes" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>
