<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundBase"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:theme="@style/ToolBarStyle"
        app:title="@string/players_team" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundBase"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardContent"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                app:cardBackgroundColor="@color/colorCardBackground"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_nba_ball" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="18dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorTextBase"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/colorTextBase"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="Los Angeles Lakers" />

                    <TextView
                        android:id="@+id/shortNameHintTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nameTextView"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/short_name"
                        android:textColor="@color/colorTextBase"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/shortNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nameTextView"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toEndOf="@+id/shortNameHintTextView"
                        android:textColor="@color/colorTextBase"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="F" />

                    <TextView
                        android:id="@+id/abbreviationHintTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/shortNameHintTextView"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/abbreviation"
                        android:textColor="@color/colorTextBase"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/abbreviationTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/shortNameHintTextView"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toEndOf="@+id/abbreviationHintTextView"
                        android:textColor="@color/colorTextBase"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="LAL" />

                    <TextView
                        android:id="@+id/cityHintTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/abbreviationHintTextView"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/city"
                        android:textColor="@color/colorTextBase"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/cityTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/abbreviationHintTextView"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toEndOf="@+id/cityHintTextView"
                        android:textColor="@color/colorTextBase"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="NY" />

                    <TextView
                        android:id="@+id/conferenceHintTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cityTextView"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/conference"
                        android:textColor="@color/colorTextBase"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/conferenceTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/cityTextView"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toEndOf="@+id/conferenceHintTextView"
                        android:textColor="@color/colorTextBase"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="conference" />

                    <TextView
                        android:id="@+id/divisionHintTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/conferenceHintTextView"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/division"
                        android:textColor="@color/colorTextBase"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/divisionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/conferenceHintTextView"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toEndOf="@+id/divisionHintTextView"
                        android:textColor="@color/colorTextBase"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="division" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <com.shtain.nba.presentation.common.view.PlaceHolderView
                android:id="@+id/placeHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:state_button_visibility="true"
                tools:visibility="visible" />

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>

