<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundBase"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:theme="@style/ToolBarStyle"
        app:title="@string/players_details" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundBase"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:layout_margin="16dp" />

            <com.shtain.nba.presentation.common.view.PlaceHolderView
                android:id="@+id/placeHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:state_button_visibility="true"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardContent"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:cardBackgroundColor="@color/colorCardBackground"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:cardMaxElevation="4dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_nba_ball" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/image"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="18dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorTextBase"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/colorTextBase"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="James LeBron" />

                    <TextView
                        android:id="@+id/positionHintTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nameTextView"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/position"
                        android:textColor="@color/colorTextBase"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/positionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nameTextView"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toEndOf="@+id/positionHintTextView"
                        android:textColor="@color/colorTextBase"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="F" />

                    <TextView
                        android:id="@+id/heightHintTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/positionHintTextView"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/height"
                        android:textColor="@color/colorTextBase"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/heightTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/positionHintTextView"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toEndOf="@+id/heightHintTextView"
                        android:textColor="@color/colorTextBase"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="15 inches" />
                    <TextView
                        android:id="@+id/weightHintTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/heightHintTextView"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/weight"
                        android:textColor="@color/colorTextBase"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/weightTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/heightHintTextView"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toEndOf="@+id/weightHintTextView"
                        android:textColor="@color/colorTextBase"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Lakes" />

                    <TextView
                        android:id="@+id/teamHintTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/weightTextView"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/team"
                        android:textColor="@color/colorTextBase"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/teamTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/weightTextView"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:layout_toEndOf="@+id/teamHintTextView"
                        android:textColor="@color/colorSecondary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Lakes" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>

